<resources>
    <!--    <string name="app_name">TelinkBleMesh</string>-->
    <string name="app_name">TelinkSigMesh</string>

    <string name="app_copyright">©2023 Telink Semiconductor</string>

    <string name="menu_scan">scan</string>
    <string name="menu_stop">stop</string>
    <string name="menu_connect">connect</string>
    <string name="menu_disconnect">disconnect</string>

    <string name="state_connected">connected</string>
    <string name="state_connecting">connecting</string>
    <string name="state_disconnected">disconnected</string>
    <string name="state_disconnecting">disconnecting</string>

    <string name="listen_enable">Listen for notifications</string>
    <string name="listen_disable">Stop listen</string>


    <string name="device_scan_header">Network Scanning</string>
    <string name="device_scan_scan">Scan Device</string>
    <string name="device_scan_add">Add Device</string>


    <string name="version">bin version: %s</string>

    <string name="node_version">version: pid-%s vid-%s</string>

    <string name="lum_progress">Lum(%d) (at ele adr: 0x%s): </string>

    <string name="lum_level">Lum Level(at ele adr: 0x%s): </string>

    <string name="temp_progress">Temp(%d) (at ele adr: 0x%s): </string>

    <string name="temp_level">Temp Level(at ele adr: 0x%s): </string>

    <!--<string name="device_state_desc">adr: 0x%s\non/off:%s lum:%d temp:%d</string>-->

    <string name="device_state_desc">adr: 0x%s\non/off:%s</string>

    <string name="scene_state_desc">adr: 0x%d\non/off:%s</string>

    <string name="device_state_desc_mesh_ota">adr-0x%s\n%s</string>

    <string name="device_prov_desc">address: %s\nuuid:%s</string>


    <string name="publication_setting">Publication (ele : %s model: %s)</string>


    <string name="enable_log">Enable LOG</string>

    <string name="auto_provision">Auto Provision</string>

    <string name="private_mode">Enable Private Mode(Default Bound)</string>


    <string name="enable_remote_provision">Remote Provision</string>

    <string name="enable_dle">Enable DLE Mode Extend Bearer</string>

    <string name="extend_bearer_title">Extend Bearer Mode</string>

    <string name="extend_bearer_no">No Extend</string>

    <string name="extend_bearer_gatt">Extend GATT Only</string>

    <string name="extend_bearer_gatt_adv">Extend GATT &amp; ADV</string>

    <string name="enable_fast_provision">Fast Provision</string>

    <string name="enable_no_oob">Use No-OOB automatically</string>

    <string name="oob_database">OOB Database</string>

    <string name="root_cert">Root Cert</string>

    <string name="oob_info">UUID: %s\nOOB : %s\n(%s)</string>

    <string name="hex_input">0123456789abcdefABCDEF</string>

    <string name="decimal_number_input">0123456789.</string>

    <string name="number_input">0123456789</string>

    <string name="send">Send</string>

    <string name="message_type_access">Access</string>

    <string name="message_type_control">Control</string>

    <string name="message_rsp_opcode_hint">Null for NO-ACK message</string>

    <string name="message_tid_hint">Null for NO-TID message</string>

    <string name="message_retry_cnt_hint">Max retry count for reliable message</string>
    <string name="message_rsp_max_hint">Expected response count for reliable message</string>

    <string name="message_location_disabled_warning">No bluetooth device found, enable location and retry?</string>

    <string name="message_ble_state_disabled">Bluetooth is disabled, enable?</string>

    <string-array name="group_name">
        <item>Living room</item>
        <item>Kitchen</item>
        <item>Master bedroom</item>
        <item>Secondary bedroom</item>
        <item>Balcony</item>
        <item>Bathroom</item>
        <item>Hallway</item>
        <item>others</item>
    </string-array>


    <string name="share_tip">
        1. On phone[1] click [EXPORT] to  export storage as json file to sdcard/TelinkBleMesh directory\n\n
        2. Copy json file to phone[2]\'s sdcard\n\n
        3. Click [select file] to select json file , then click [IMPORT] to load json file and sync storage\n\n
        4. Back to home page, and waiting for mesh reconnect\n\n
    </string>

    <string-array name="share_flow">
        <item>1. On phone[1] click [EXPORT] to  export storage as json file to sdcard/TelinkBleMesh directory </item>
        <item>2. Copy json file to phone[2]\'s sdcard</item>
        <item>3. Click [select file] to select json file , then click [IMPORT] to load json file and sync storage</item>
        <item>4. Back to home page, and waiting for mesh reconnect </item>
    </string-array>

    <string name="provision_mode_tip">
        Enabled for scanning , provisioning and key-binding one by one;
        Disabled for selectable networking.
    </string>

    <string name="sub_level_service_tip">
        Enabled for scanning , provisioning and key-binding one by one;
        Disabled for selectable networking.
    </string>

    <string name="auto_provision_tip">
        Enabled for scanning , provisioning and key-binding one by one;
        Disabled for selectable networking.
    </string>

    <string name="log_tip">
        TIP:
        Enabled for default bound when key-binding;
    </string>

    <string name="private_mode_tip">
        Enabled for default bound when key-binding;
    </string>

    <string name="remote_prov_tip">
        If remote provision enabled, provision process will be:\n\n
        1. Scan for an unprovisioned device, connect and provision;\n\n
        2. Keep the connection state, send scan command to the device;\n\n
        3. Some remote devices info will be upload;\n\n
        4. Check and do provision one by one;\n\n
    </string>

    <string name="oob_database_tip">
        Database file should be formatted as:\n
        [uuid0] [oob0]\n
        [uuid1] [oob1]\n
        [uuid2] [oob2]\n
        \.\.\.\n\n
        (uuid and oob array length should be 16)\n
    </string>

    <string name="use_no_oob_tip">
        Use No-OOB if device UUID not found when device is static-OOB supported
    </string>


    <string name="online_status_tip">
        Use No-OOB if device UUID not found when device is static-OOB supported
    </string>

    <string name="dle_tip">
        DLE selected action will change mesh upper layer segmentation bound:
        \n\n\tDisabled ->  segment bound is 11;
        \n\n\tEnabled ->  segment bound is 225.
        \n\n\nSee [UNSEGMENTED_ACCESS_PAYLOAD_MAX_LENGTH_DEFAULT] and [UNSEGMENTED_ACCESS_PAYLOAD_MAX_LENGTH_LONG] in [NetworkingController].

    </string>

    <string name="extend_mode_tip">
        DLE selected action will change mesh upper layer segmentation bound:
        \n\n\tDisabled ->  segment bound is 11;
        \n\n\tEnabled ->  segment bound is 225.
        \n\n\nSee [UNSEGMENTED_ACCESS_PAYLOAD_MAX_LENGTH_DEFAULT] and [UNSEGMENTED_ACCESS_PAYLOAD_MAX_LENGTH_LONG] in [NetworkingController].

    </string>


    <string name="fast_pv_tip">
        Telink private provision profile, scan and setting device by direct connected mesh device.
    </string>

    <string name="online_status_enabled">Online Status: ENABLED</string>

    <string name="online_status_disabled">Online Status: DISABLED</string>

    <string name="export_tip">1.Select at least one network key \n2.Select destination\n3.Click EXPORT</string>

    <string name="import_tip">1.Select source \n2.If the selected source is JSON file, select the target file \n3.Click IMPORT</string>


    <string name="enable_subnet_bridge">Enable Subnet Bridge</string>

    <string name="init_progress">Initiate progress(%d):</string>

    <string name="dist_progress">Distribute progress(%d):</string>

    <string name="df_origin_desc">0x%s</string>

    <string name="df_route_node">Node-%s</string>

    <string name="extend_bearer_mode_tip">
        1. No Extend: No extension is used. \n\n
        2. Extend GATT Only: Only GATT (Generic Attribute Profile) is used for extending the bearer. \n\n
        3. Extend GATT &amp; ADV: Both GATT and advertising are used for extending the bearer. \n\n
    </string>


    <string name="share_import_action_complete_tip">
        1. Manual Switch(Default): Switch mesh network by manual. \n\n
        2. Auto Switch: Switch mesh network automatically after import comple. \n\n
    </string>

    <string name="tip_enable_pvt_gatt_prx">
        When the switch is on:\n
            \t1. turned off gatt proxy by sent Gatt Proxy Set Message (gattProxy=0)\n
            \t2. turned on private beacon by sent Private Gatt Proxy Set Message (privateGattProxy=1)\n
        Otherwise, the value in message is reversed (gattProxy=1, privateGattProxy=0)
    </string>

    <string name="tip_enable_pvt_node_id">
        When the switch is on:\n
            \t1. turned off node identity by sent Node Identity Set Message (identity=0)\n
            \t2. turned on private node identity by sent Private Node Identity Set Message (privateIdentity=1)\n
        Otherwise, the value in message is reversed (identity=1, privateIdentity=0)
    </string>

    <string name="tip_enable_pv_bcn">
        When the switch is on:\n
            \t1. turned off beacon by sent Beacon Set Message (beacon=0)\n
            \t2. turned on private beacon by sent Private Beacon Set Message (privateBeacon=0)\n
        Otherwise, the value in message is reversed (beacon=1, privateBeacon=0)
    </string>

</resources>
