<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Action: "
                android:textSize="@dimen/info_text_size" />

            <EditText
                android:id="@+id/et_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableTint="@color/colorPrimary"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:text="vendor-on"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Access Type: "
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="Application"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*dst adr: 0x"
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_dst_adr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/hex_input"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*opcode: 0x"
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_opcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/hex_input"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="params: 0x"
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_params"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/hex_input"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_params_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tip_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rsp opcode: 0x"
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_rsp_opcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/hex_input"
                    android:hint="@string/message_rsp_opcode_hint"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rsp max: "
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_rsp_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message_rsp_max_hint"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="retry count: "
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_retry_cnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_input"
                    android:hint="@string/message_retry_cnt_hint"
                    android:inputType="number"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ttl: "
                    android:textSize="@dimen/info_text_size" />

                <EditText
                    android:id="@+id/et_ttl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_input"
                    android:text="5"
                    android:textSize="@dimen/msg_input_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tid position: "
                    android:textSize="@dimen/info_text_size" />


                <EditText
                    android:id="@+id/et_tid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_input"
                    android:hint="@string/message_tid_hint"
                    android:textSize="@dimen/msg_input_size" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name: "
                android:textSize="@dimen/info_text_size" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="action name"
                android:textSize="@dimen/msg_input_size" />

        </LinearLayout>


        <ImageView
            android:id="@+id/iv_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_arrow_up"
            android:tint="@color/grey" />

        <ScrollView
            android:id="@+id/sv_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </ScrollView>
    </LinearLayout>


</LinearLayout>