<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.telink.ble.mesh.ui.widget.CompositionColorView
            android:id="@+id/cps_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:id="@+id/ll_lum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_lum_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lum_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lum_level"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_lum_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/ic_minus"
                        android:tint="@color/grey" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_lum_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/ic_plus"
                        android:tint="@color/grey" />
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_lum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lum_progress"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:min="1"
                android:padding="4dp"
                android:progress="9" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_temp_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_temp_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lum_level"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_temp_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/ic_minus"
                        android:tint="@color/grey" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_temp_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/ic_plus"
                        android:tint="@color/grey" />
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_progress"
                android:textSize="12sp" />

            <SeekBar
                android:id="@+id/sb_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:progress="10" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="24dp" />
    </LinearLayout>

</ScrollView>